changement pour affichage des imgs dans CRUD

--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,6 +1,9 @@
 vich_uploader:
   db_driver: orm
 
+  metadata:
+    type: attribute
+
   mappings:
     voitures:
       uri_prefix: /images/voitures
